--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
     "preinstall": "npm run npmcheckversion",
     "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production webpack --config API_URL=https://admin.nom035.online internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "build": "cross-env NODE_ENV=production webpack --config API_URL=https://jebla.py2lab.com internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:clean": "rimraf ./build",
-    "start": "cross-env NODE_ENV=development API_URL=https://admin.nom035.online node server",
+    "start": "cross-env NODE_ENV=development API_URL=https://jebla.py2lab.com node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -143,7 +143,6 @@
     "jest-dom": "3.1.3",
     "jest-styled-components": "6.3.1",
     "lint-staged": "8.1.5",
-    "ngrok": "3.1.1",
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
